--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html>
 <head>
 <title>tba</title>
+<style>
+body {
+    color: lightgray;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: dimgray;
+}
+.tableofcontents {
+    background-color: darkslategray;
+    width: 350px;
+    height: 315px;
+}
+.tocheader {
+    text-align: center;
+    position: relative;
+    
+}
+.section {
+    border-style: double;
+    border-radius: 5px;
+}
+</style>
 </head>
 <body>
 
